--- a/style.css
+++ b/style.css
@@ -1,20 +1,5 @@
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-}
-
-* {
-    font-family: roboto;
-}
-
-.body {
-height: 375px;
-flex-direction: column;
-}
-
-.container {
-    max-width: 120;
+font-family: roboto;
 }
 
 .bloc-logo {
@@ -48,56 +33,109 @@ color:#353535;;
 }
 
 .flex { 
-    display: flex;
+display: flex;
 
 }
 
 .size-city {
-    display: flex;
-    font-weight: bold;
-    color:#353535;
+display: flex;
+font-weight: bold;
+color:#353535;
 
 }
 
 p {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color:#F7F7F7 ;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+background-color:#F7F7F7 ;
 
 }
 
 .reserve {
-    text-align: center;
-    width: 275px;
-    height: 68px;
-    margin-left: 42px;
-    margin-right: 58px;
+text-align: center;
+width: 275px;
+height: 68px;
+margin-left: 42px;
+margin-right: 58px;
+margin-top: 25px;
 }
 
 .discover {
 text-align: center;
-    width: 315px;
-    height: 46px;
-    margin-right: 26px;
-    margin-left: 34px;
+width: 315px;
+height: 46px;
+margin-right: 26px;
+margin-left: 34px;
+margin-bottom: 27px;
 }
 
 .button {
-    display: flex;
-    width: 218px;
-    height: 50px;
-    background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
-    border-radius: 25px;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 50px;
+display: flex;
+width: 218px;
+height: 50px;
+background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+border-radius: 25px;
+box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+color: white;
+justify-content: center;
+align-items: center;
+margin-bottom: 50px;
+}
+
+.fonctionnement{ 
+flex-direction: column;
+}
+
+.title {
+margin-left: 20px;
+margin-top: 48px;
+margin-bottom: 26px;
+}
+
+.choice {
+display: flex;
+align-items: center;
+justify-content: center;
+height: 72px;
+background-color: #F7F7F7;
+box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+border-radius: 20px;
+font-weight: bold;
+margin-bottom: 25px;
+width: 85%;
+margin-left: 8%;
+}
+.menu {
+display: flex;
+align-items: center;
+justify-content: center;
+height: 72px;
+background-color: #F7F7F7;
+box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+border-radius: 20px;
+font-weight: bold;
+margin-bottom: 25px;
+width: 85%;
+margin-left: 8%;
+}
+.degustez { 
+display: flex;
+align-items: center;
+justify-content: center;
+height: 72px;
+background-color: #F7F7F7;
+box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+border-radius: 20px;
+font-weight: bold;
+margin-bottom: 68px;
+width: 85%;
+margin-left: 8%;
 }
