--- a/style.css
+++ b/style.css
@@ -41,13 +41,6 @@ display: flex;
 display: flex;
 font-weight: bold;
 color:#353535;
-
-}
-
-p {
-display: flex;
-justify-content: center;
-align-items: center;
 }
 
 nav {
@@ -88,6 +81,7 @@ color: white;
 justify-content: center;
 align-items: center;
 margin-bottom: 50px;
+cursor: pointer;
 }
 
 .fonctionnement{ 
@@ -99,6 +93,12 @@ margin-left: 20px;
 margin-top: 48px;
 margin-bottom: 26px;
 }
+
+.title2 {
+    margin-left: 20px;
+    padding-top: 54px;
+    margin-bottom: 26px;
+    }
 
 .choice {
 display: flex;
@@ -138,4 +138,35 @@ font-weight: bold;
 margin-bottom: 68px;
 width: 85%;
 margin-left: 8%;
+}
+
+.restaurants {
+display: flex;
+flex-direction: column;
+background-color: #f7f7f7;
+}
+
+.restau-card {
+display: block;
+margin: auto;
+width: 80%;
+height: 235px;
+background-color: #FFFFFF;
+border-radius: 15px;
+margin-bottom: 20px;
+box-shadow: 0px 4px 15px;
+box-sizing: border-box;
+
+}
+
+.size-img {
+object-fit: cover;
+width: 100%;
+height: 60%;
+border-top-left-radius: 15px;
+border-top-right-radius: 15px;
+}
+
+.restau {
+    margin-left: 20px;
 }
