--- a/style.css
+++ b/style.css
@@ -55,18 +55,14 @@ nav {
 	text-align: center;
 	width: 275px;
 	height: 68px;
-	margin-left: 42px;
-	margin-right: 58px;
-	margin-top: 25px;
+	padding: 10px;
 }
 
 .discover {
 	text-align: center;
 	width: 315px;
 	height: 46px;
-	margin-right: 26px;
-	margin-left: 34px;
-	margin-bottom: 27px;
+	padding-bottom: 20px;
 }
 
 .button {
@@ -89,9 +85,8 @@ nav {
 }
 
 .title {
-	margin-left: 20px;
-	margin-top: 48px;
-	margin-bottom: 26px;
+	margin-left: 10%;
+	margin-top: 5%;
 }
 
 .title2 {
@@ -207,4 +202,26 @@ nav {
 
 .restau {
 	margin-left: 20px;
+}
+
+.logo-footer {
+	font-family: 'Shrikhand';
+	font-size: 18px;
+	line-height: 26px;
+	color: white;
+}
+
+.icon-footer {
+	color: white;
+	padding-right: 7px;
+}
+
+footer {
+	width: 375px;
+	height: 186px;
+	background-color: #353535;
+	padding-bottom: 10px;
+	padding-left: 25px;
+	padding-top: 22px;
+	color: white;
 }
