--- a/css/style.css
+++ b/css/style.css
@@ -95,43 +95,39 @@ nav {
 	margin-bottom: 26px;
 }
 
-.icon-flex {
-	margin-right: 20px;
-	color: rgba(126, 126, 126, 1);
-}
 
 .icon-flex:hover {
 	color: rgba(147, 86, 220, 1);
 }
 
-.number {
-	width: 24px;
-	height: 24px;
-	background: rgba(147, 86, 220, 1);
-	color: white;
-	font-size: 16px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 50%;
-	position: relative;
-	left: 20px;
-	top: 46px;
-	padding: 1px 1px;
+.icon-flex {
+    margin-right: 20px;
+    color: rgba(126, 126, 126, 1);
 }
 
-.choice {
+.number {
+    width: 24px;
+    height: 24px;
+    background: rgba(147, 86, 220, 1);
+    color: white;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.number-container {
+    position: relative;
+    left: -22px; /* La moitié de la largeur (24px) */
+    margin-right: -12px;
+    z-index: 1;
+}
+
+.flex {
 	display: flex;
-	justify-content: center;
 	align-items: center;
-	height: 72px;
-	background-color: #F7F7F7;
-	box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-	border-radius: 20px;
-	font-weight: bold;
-	margin-bottom: 25px;
-	max-width: 320px;
-	margin-left: 8%;
+	justify-content: center;
 }
 
 .nouveau {
@@ -147,32 +143,49 @@ nav {
 	margin-top: 10px;
 }
 
+.choice {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 72px;
+    width:80%;
+    background-color: #F7F7F7;
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+    font-weight: bold;
+    margin-bottom: 25px;
+    margin-left: 8%;
+    padding-left: 12px; 
+}
+
 .menu {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 72px;
-	background-color: #F7F7F7;
-	box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-	border-radius: 20px;
-	font-weight: bold;
-	margin-bottom: 25px;
-	max-width: 320px;
-	margin-left: 8%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 72px;
+    width:70%;
+    background-color: #F7F7F7;
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+    font-weight: bold;
+    margin-bottom: 25px;
+    margin-left: 8%;
+    padding-left: 12px; 
 }
 
 .degustez {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 72px;
-	background-color: #F7F7F7;
-	box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-	border-radius: 20px;
-	font-weight: bold;
-	margin-bottom: 68px;
-	max-width: 320px;
-	margin-left: 8%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 72px;
+    width:70%;
+    background-color: #F7F7F7;
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+    font-weight: bold;
+    margin-bottom: 25px;
+    margin-left: 8%;
+    padding-left: 12px; 
 }
 
 .restaurants {
