--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ nav {
 	margin-top: 10px;
 }
 
-.choice {
+.button-funct {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -158,35 +158,7 @@ nav {
     padding-left: 12px; 
 }
 
-.menu {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 72px;
-    width:70%;
-    background-color: #F7F7F7;
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-    border-radius: 20px;
-    font-weight: bold;
-    margin-bottom: 25px;
-    margin-left: 8%;
-    padding-left: 12px; 
-}
 
-.degustez {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 72px;
-    width:70%;
-    background-color: #F7F7F7;
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-    border-radius: 20px;
-    font-weight: bold;
-    margin-bottom: 25px;
-    margin-left: 8%;
-    padding-left: 12px; 
-}
 
 .restaurants {
 	display: flex;
