--- a/css/style.css
+++ b/css/style.css
@@ -158,8 +158,6 @@ nav {
     padding-left: 12px; 
 }
 
-
-
 .restaurants {
 	display: flex;
 	flex-direction: column;
@@ -202,7 +200,7 @@ nav {
 }
 
 footer {
-	width: 375px;
+	width: 100%;
 	height: 186px;
 	background-color: #353535;
 	padding-bottom: 10px;
