--- a/css/style2.css
+++ b/css/style2.css
@@ -3,6 +3,11 @@
 	font-family: 'Roboto'
 }
 
+.flex {
+	display: flex;
+	align-items: center;
+}
+
 .bloc-logo {
 	display: flex;
 	flex-direction: column;
@@ -15,6 +20,89 @@
 .size-img {
     display: flex;
     justify-content: center;
-    width: 375px;
+    width: 100%;
     height: 275px;
+}
+
+.title-restau {
+	font-family: 'Shrikhand';
+	font-weight: 400;
+	padding-top: 20px;
+	padding-left: 20px;
+}
+
+.menu {
+	display: block;
+	width: 100%;
+	height: 1300px;
+	background-color: #F7F7F7;
+	border-radius: 25px 25px;
+	position: relative;
+	top: -20px;
+}
+
+.fa-xl {
+	padding-top: 20px;
+	padding-left: 50px;
+}
+
+.upper {
+	font-family:'roboto';
+	text-transform: uppercase;
+	font-weight:lighter;
+	margin-left: 13px;
+	border-bottom: 3px solid #99E2D0;
+	width: 40px;
+	font-style: normal;
+}
+
+.food-item {
+	width: 94%;
+	height: 69px;
+	box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px rgba(0, 0, 0, 0.1);
+	border-radius: 15px;
+	margin-left: 10px;
+	margin-bottom: 15px;
+}
+
+.button {
+	font-family: 'roboto';
+	display: flex;
+	width: 50%;
+	height: 50px;
+	background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+	border-radius: 25px;
+	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+	color: white;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	margin-left: 25%;
+}
+
+
+
+
+/* FOOTER */
+
+.logo-footer {
+	font-family: 'Shrikhand';
+	font-size: 18px;
+	line-height: 26px;
+	color: white;
+}
+
+.icon-footer {
+	color: white;
+	padding-right: 7px;
+}
+
+footer {
+	width: 100%;
+	height: 186px;
+	background-color: #353535;
+	padding-bottom: 10px;
+	padding-left: 25px;
+	padding-top: 22px;
+	color: white;
 }
