--- a/css/style2.css
+++ b/css/style2.css
@@ -10,18 +10,23 @@
 
 .logo {
 	display: flex;
-	justify-content: center;
 	align-items: center;
+	justify-content: center;
 }
 
 .icon-back {
-display: flex;	
+display: flex;
 }
 
 .bloc-logo {
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
-	justify-content: center;
+	height: 63px;
+}
+
+.empty-div {
+
 }
 
 .size-img {
@@ -41,7 +46,6 @@ display: flex;
 .menu {
 	display: block;
 	width: 100%;
-	height: 1300px;
 	background-color: #F7F7F7;
 	border-radius: 25px 25px;
 	position: relative;
@@ -49,8 +53,8 @@ display: flex;
 }
 
 .fa-xl1 {
-	margin-left: auto 0;
 	cursor: pointer;
+	margin-left: 1rem;
 }
 
 .fa-xl2 {
@@ -71,11 +75,12 @@ display: flex;
 
 .food-item {
 	width: 94%;
-	height: 69px;
+	height: 90px;
 	box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px rgba(0, 0, 0, 0.1);
 	border-radius: 15px;
 	margin-left: 10px;
 	margin-bottom: 15px;
+	padding-top: 2px;
 }
 
 .button {
@@ -93,6 +98,14 @@ display: flex;
 	margin-left: 25%;
 }
 
+.marge1 {
+	margin-left: 15px;
+	font-weight: bold;
+}
+
+.marge2 {
+	margin-left: 15px;
+}
 
 
 
