--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@
 	;
 }
 
+a {
+	text-decoration: none;
+	color: white;
+}
+
 .flex {
 	display: flex;
 }
@@ -78,6 +83,8 @@ nav {
 	margin-bottom: 50px;
 	cursor: pointer;
 }
+
+
 
 /* Fonctionnement */
 .fonctionnement {
@@ -138,9 +145,10 @@ nav {
 	align-items: center;
 	display: flex;
 	position: absolute;
-	right: 60px;
 	color: rgba(0, 135, 102, 1);
 	margin-top: 10px;
+	right: 2%;
+	top: 5%;
 }
 
 .button-funct {
@@ -165,6 +173,7 @@ nav {
 }
 
 .restau-card {
+	position: relative;
 	display: block;
 	margin: auto;
 	width: 80%;
