--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 	font-family: 'Roboto', sans-serif;
 }
 
+.stylefont {
+	font-style: normal;
+}
+
 .bloc-logo {
 	display: flex;
 	flex-direction: column;
@@ -82,6 +86,10 @@ nav {
 	align-items: center;
 	margin-bottom: 50px;
 	cursor: pointer;
+}
+
+.button-funct p {
+	font-weight: 500;
 }
 
 
