--- a/css/style2.css
+++ b/css/style2.css
@@ -30,10 +30,10 @@ display: flex;
 }
 
 .size-img {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 275px;
+	width: 100%;
+    max-width: 100%;
+	max-height: 32rem;
+	object-fit: cover;
 }
 
 .title-restau {
