--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -25,10 +25,6 @@ display: flex;
 	height: 63px;
 }
 
-.empty-div {
-
-}
-
 .size-img {
 	width: 100%;
     max-width: 100%;
@@ -44,12 +40,12 @@ display: flex;
 }
 
 .menu {
-	display: block;
 	width: 100%;
 	background-color: #F7F7F7;
 	border-radius: 25px 25px;
 	position: relative;
 	top: -20px;
+	z-index: 1;
 }
 
 .fa-xl1 {
@@ -61,6 +57,13 @@ display: flex;
 	padding-top: 20px;
 	padding-left: 50px;
 	cursor: pointer;
+}
+
+.testheart {
+	opacity: 0;
+    transition: .5s;
+    content: "";
+    background: linear-gradient(0deg,#9356dc,#ff79da);
 }
 
 .upper {
@@ -180,6 +183,19 @@ height: 5px;
 	width: 70%;
 	margin-left: 15%;
 }
+
+.flex {
+justify-content: center;
+}
+
+.upper {
+	margin-left: 16%;
+}
+
+.food-item {
+margin-left: 15%;
+}
+
 .price {
 	display: flex;
 	justify-content: flex-end;
