--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -59,6 +59,8 @@ display: flex;
 	cursor: pointer;
 }
 
+/* TEST HOVER COEUR */
+
 .testheart {
 	opacity: 0;
     transition: .5s;
@@ -182,6 +184,8 @@ height: 5px;
 	align-items: center;
 	width: 70%;
 	margin-left: 15%;
+	padding-bottom: 10px;
+	border-radius: 25px 25px 0px 0px;
 }
 
 .flex {
@@ -204,6 +208,24 @@ margin-left: 15%;
 	margin-top: -25px;
 }
 
+.entr {
+	margin-bottom: 5%;
+}
+
+.plats {
+	margin-bottom: 5%;
+}
+
+.desserts {
+	margin-bottom: 5%;
+}
+
+.button {
+	width: 15%;
+	margin-left: 40%;
+	margin-bottom: 40px;
+}
+
 
 /* Footer */
 
@@ -219,6 +241,7 @@ margin-left: 15%;
 	display: flex;
 	direction: rtl;
 	justify-content: space-around;
+	margin-top: -40px;
 }
 
 footer {
