--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,44 @@
 	font-family: 'Roboto';
 }
 
-a {
-	text-decoration: none;
+/* LOADER */
+
+.loader-container {
+	position: absolute;
+	background-color: white;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: opacity 1s ease-in-out;
 }
+
+.dot {
+	height: 50px;
+	width: 50px;
+	border-radius: 50%;
+	margin: 0 15px;
+	animation: loader infinite 0.3s alternate 2s;
+}
+
+.d1 {
+	background-color: #9356DC;
+}
+
+.d2 {
+	background-color: #FF79DA;
+	animation-delay: 0.05s;
+}
+
+.d3 {
+	background-color: #99E2D0;
+	animation-delay: 0.1s;
+}
+
+@keyframes loader {
+100% { 
+	transform: translateY(-30px);
+} }
 
 .stylefont {
 	font-style: normal;
@@ -43,7 +78,6 @@ a {
 
 a {
 	text-decoration: none;
-	color: white;
 }
 
 .flex {
@@ -85,11 +119,19 @@ nav {
 	background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
 	border-radius: 25px;
 	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-	color: white;
 	justify-content: center;
 	align-items: center;
 	margin-bottom: 50px;
 	cursor: pointer;
+}
+
+header a {
+	color: white;
+}
+
+section a {
+	text-decoration: none;
+	color: black;
 }
 
 .button-funct p {
@@ -163,19 +205,28 @@ nav {
 }
 
 .button-funct {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 72px;
-    width:80%;
-    background-color: #F7F7F7;
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-    border-radius: 20px;
-    font-weight: bold;
-    margin-bottom: 25px;
-    margin-left: 8%;
-    padding-left: 12px; 
-}
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	height: 72px;
+	width: 80%;
+	background-color: #F6F6F6;
+	box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+	border-radius: 20px;
+	font-weight: bold;
+	margin-bottom: 25px;
+	margin-left: 8%;
+	padding-left: 12px;
+	transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .button-funct:hover {
+	background-color: #F7F7F7;
+	box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.2);
+  }
+  
+  
+  
 
 .restaurants {
 	display: flex;
