--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -10,12 +10,12 @@ a {
 /* LOADER */
 
 .loader-container {
-	position: relative;
-	background-color: #F7F7F7;
+	position: absolute;
+	width: 100vw;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	transition: opacity 1s ease-in-out;
+	animation: hideLoader 2.5s forwards;
   }
   
   .dot {
@@ -23,7 +23,7 @@ a {
 	width: 50px;
 	border-radius: 50%;
 	margin: 0 15px;
-	animation: loader 0.6s alternate;
+	animation: loader infinite 0.3s alternate;
   }
   
   .d1 {
@@ -43,6 +43,17 @@ a {
   @keyframes loader {
 	100% {
 	  transform: translateY(-30px);
+	}
+  }
+  
+  @keyframes hideLoader {
+	0%, 90% {
+	  opacity: 1;
+	  visibility: visible;
+	}
+	100% {
+	  opacity: 0;
+	  visibility: hidden;
 	}
   }
   
