--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,9 @@
 	top: 0;
 	left: 0;
 	right: 0;
+	height: 1440px;
 	bottom: 0;
-	background-color: rgba(128, 128, 128, 0.5);
+	background-color: rgba(233, 233, 233, 0.363);
 	animation: hideLoader 2.5s forwards;
   }
   
