--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ footer a {
 	top: 0;
 	left: 0;
 	right: 0;
-	height: 1440px;
+	height: 1550px;
 	bottom: 0;
 	background-color: rgba(233, 233, 233, 0.363);
 	animation: hideLoader 2.5s forwards;
@@ -329,52 +329,65 @@ footer a {
 
   /* COEUR */
 
-.btn-like {
-  height: 2rem;
-  width: 2rem;
-  background-color: transparent;
-  border: transparent solid 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  position: relative;
+  .heart-btn:hover::after {
+    transform: scaleY(0);
 }
-.btn-like:hover::before {
-  opacity: 1;
+.heart-btn:hover .heart-btn__empty {
+    opacity: 0;
 }
-
-.btn-like::before {
-  opacity: 0;
-  transition: 0.s;
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);;
+.heart-btn:hover .heart-btn__filled {
+    transform: scale(1);
+}
+.heart-btn--accent {
+    cursor: pointer;
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    bottom: 30px;
+    right: 24px;
 }
 
-.heart-like {
-  transition-duration: 0.25s;
-  background-color:white;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  mix-blend-mode: lighten;
+.heart-btn {
+    font-size: 1.5em;
 }
-.btn-like:hover .heart-like-rempli {
-  opacity: 0;
+.heart-btn--accent::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 24px;
+    height: 24px;
+    opacity: 1;
+    z-index: 1;
+    transition: transform 500ms cubic-bezier(0.55, 1.2, 0.93, 1);
+    transform-origin: top;
+    background: #f6f6f6;
+    background: white;
 }
-
-
-
+.heart-btn--accent {
+    width: 24px;
+    height: 24px;
+    bottom: 30px;
+    right: 24px;
+}
+.heart-btn__empty {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-weight: 100;
+    z-index: 2;
+}
+.heart-btn__filled {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
 
 
