overlay terminé, problème sur le coeur des menus

--- a/css/style.css
+++ b/css/style.css
@@ -284,8 +284,9 @@ footer a {
 	right: 0;
 	height: 1550px;
 	bottom: 0;
-	background-color: rgba(233, 233, 233, 0.363);
+	background-color: rgba(233, 233, 233, 0.8);
 	animation: hideLoader 2.5s forwards;
+	z-index: 999;
   }
   
   .dot {
