overlay terminé sur toutes les pages

--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -36,11 +36,12 @@ color: #353535;
 	font-family: 'Shrikhand';
 	font-weight: 400;
 	padding-left: 20px;
+	font-size: 27px;
 }
 .header-container {
+	position: relative;
     display: flex;
     align-items: center;
-	justify-content: center;
     justify-content: space-between;
 }
 
@@ -88,6 +89,7 @@ color: #353535;
 	background-color: rgba(255, 255, 255, 0.897);
 	animation: hideLoader 2.5s forwards;
 	opacity: 0;
+	z-index: 999;
   }
 
   @keyframes loader {
@@ -171,9 +173,9 @@ color: #353535;
 .heart-btn--accent::after {
     content: "";
     position: absolute;
-    top: 0;
+    top: 25px;
     bottom: 0;
-    left: 0;
+    left: 250px;
     right: 0;
     width: 24px;
     height: 24px;
@@ -192,15 +194,15 @@ color: #353535;
 }
 .heart-btn__empty {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 25px;
+    left: 250px;
     font-weight: 100;
     z-index: 2;
 }
 .heart-btn__filled {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 25px;
+    left: 250px;
     z-index: 0;
     background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
     -webkit-background-clip: text;
