--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -170,12 +170,20 @@ color: #353535;
 .heart-btn {
     font-size: 1.5em;
 	}
+
+.heart-btn--accent {
+    width: 24px;
+    height: 24px;
+    bottom: 30px;
+    right: 24px;
+}
+
 .heart-btn--accent::after {
     content: "";
     position: absolute;
-    top: 25px;
+    top: 35%;
     bottom: 0;
-    left: 250px;
+    left: 50%;
     right: 0;
     width: 24px;
     height: 24px;
@@ -183,26 +191,21 @@ color: #353535;
     z-index: 1;
     transition: transform 500ms cubic-bezier(0.55, 1.2, 0.93, 1);
     transform-origin: top;
-    background: #f6f6f6;
-    background: white;
+	background-color: #F7F7F7;
+	background-color: #F7F7F7;
 }
-.heart-btn--accent {
-    width: 24px;
-    height: 24px;
-    bottom: 30px;
-    right: 24px;
-}
+
 .heart-btn__empty {
     position: absolute;
-    top: 25px;
-    left: 250px;
+    top: 35%;
+    left: 50%;
     font-weight: 100;
     z-index: 2;
 }
 .heart-btn__filled {
     position: absolute;
-    top: 25px;
-    left: 250px;
+    top: 35%;
+    left: 50%;
     z-index: 0;
     background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
     -webkit-background-clip: text;
@@ -342,7 +345,7 @@ color: #353535;
 }
 
 .check i {
-	color: white;
+  color: white;
   z-index: 1; }
 
 /* FOOTER */
@@ -409,6 +412,31 @@ justify-content: center;
 	width: 15%;
 	margin-left: 40%;
 	margin-bottom: 40px;
+}
+
+/* COEUR RESPONSIVE */
+
+.heart-btn--accent::after {
+    top: 32%;
+    left: 95%;
+    
+}
+
+.heart-btn__empty {
+    position: absolute;
+    top: 32%;
+    left: 95%;
+    font-weight: 100;
+    z-index: 2;
+}
+.heart-btn__filled {
+    position: absolute;
+    top: 32%;
+    left: 95%;
+    z-index: 0;
+    background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 
