--- a/css/style.css
+++ b/css/style.css
@@ -282,10 +282,11 @@ footer a {
 	top: 0;
 	left: 0;
 	right: 0;
-	height: 1550px;
+	height: 1750px;
 	bottom: 0;
 	background-color: rgba(233, 233, 233, 0.8);
 	animation: hideLoader 2.5s forwards;
+	opacity: 0;
 	z-index: 999;
   }
   
@@ -394,7 +395,7 @@ footer a {
 
 /* Responsive */
 
-/* TABLETTE&Desktop */
+/* DESKTOP + TABLETTE */
 
 @media (min-width: 768px)
 {
@@ -496,11 +497,4 @@ footer {
 	margin-right: -2%;
 	order: 1;
 	cursor: pointer;
-}
-
-/* DESKTOP */
-
-@media (min-width: 1024px)
-{
-
 }
