--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -38,6 +38,11 @@ color: #353535;
 	padding-left: 20px;
 	font-size: 27px;
 }
+
+.title {
+display: flex;
+justify-content: space-between;}
+
 .header-container {
 	position: relative;
     display: flex;
@@ -76,7 +81,6 @@ color: #353535;
 	justify-content: center;
 	align-items: center;
 	animation: hideLoader 2.5s forwards;
-	margin-left: -20%;
   }
   
   .overlay {
@@ -84,29 +88,13 @@ color: #353535;
 	top: 0;
 	left: 0;
 	right: 0;
-	height: 1970px;
+	height: 2120px;
+	width: 100%;
 	bottom: 0;
-	background-color: rgba(255, 255, 255, 0.897);
+	background-color: rgba(233, 233, 233, 0.8);
 	animation: hideLoader 2.5s forwards;
 	opacity: 0;
 	z-index: 999;
-  }
-
-  @keyframes loader {
-	100% {
-	  transform: translateY(-30px);
-	}
-  }
-  
-  @keyframes hideLoader {
-	0%, 90% {
-	  opacity: 1;
-	  visibility: visible;
-	}
-	100% {
-	  opacity: 0;
-	  visibility: hidden;
-	}
   }
   
   .dot {
@@ -183,7 +171,7 @@ color: #353535;
     position: absolute;
     top: 35%;
     bottom: 0;
-    left: 50%;
+    left: 87%;
     right: 0;
     width: 24px;
     height: 24px;
@@ -198,14 +186,14 @@ color: #353535;
 .heart-btn__empty {
     position: absolute;
     top: 35%;
-    left: 50%;
+    left: 87%;
     font-weight: 100;
     z-index: 2;
 }
 .heart-btn__filled {
     position: absolute;
     top: 35%;
-    left: 50%;
+    left: 87%;
     z-index: 0;
     background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
     -webkit-background-clip: text;
@@ -234,9 +222,8 @@ color: #353535;
     background-color: #ffffff;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    width: 90%;
+    width: 88%;
     height: 90px;
-    margin-left: 10px;
     opacity: 0;
     transform: translateY(20px);
     cursor: pointer;
@@ -334,10 +321,12 @@ color: #353535;
 	align-items: center;
 	transition: width 0.5s cubic-bezier(.25,.46,.45,.94);
 	border-radius: 0px 15px 15px 0px;
+	color: transparent;
 }
 
 .food-item:hover .check {
 	width: 80px;
+	color: white;
 }
 
 .food-item:hover .price {
@@ -345,8 +334,12 @@ color: #353535;
 }
 
 .check i {
-  color: white;
-  z-index: 1; }
+  z-index: 1;
+}
+
+  .fa-check-circle {
+
+  }
 
 /* FOOTER */
 
@@ -437,6 +430,11 @@ justify-content: center;
     background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.food-item {
+    width: 95%;
+    height: 90px;
 }
 
 
