--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -81,6 +81,7 @@ justify-content: space-between;}
 	justify-content: center;
 	align-items: center;
 	animation: hideLoader 2.5s forwards;
+	margin-left: -20%;
   }
   
   .overlay {
@@ -93,7 +94,6 @@ justify-content: space-between;}
 	bottom: 0;
 	background-color: rgba(233, 233, 233, 0.8);
 	animation: hideLoader 2.5s forwards;
-	opacity: 0;
 	z-index: 999;
   }
   
@@ -179,7 +179,6 @@ justify-content: space-between;}
     z-index: 1;
     transition: transform 500ms cubic-bezier(0.55, 1.2, 0.93, 1);
     transform-origin: top;
-	background-color: #F7F7F7;
 	background-color: #F7F7F7;
 }
 
