--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,17 @@ footer a {
 	align-items: center;
 	animation: hideLoader 2.5s forwards;
   }
+
+  .loader-wrapper {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  }
   
   .overlay {
 	position: absolute;
