--- a/css/style.css
+++ b/css/style.css
@@ -114,13 +114,14 @@ section a {
 }
 
 
-.icon-flex:hover {
+. .button-funct:hover .icon-flex:hover {
 	color: rgba(147, 86, 220, 1);
 }
 
 .icon-flex {
     margin-right: 20px;
     color: rgba(126, 126, 126, 1);
+	z-index: 1;
 }
 
 .number {
